# Platanomelon-Part2

./: LICENSE  README.MD  main.py  pyproject.toml  requirements.txt
app/: Iris.py  app.py  test_app.py
