[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["RikiSot <ricardo.gomez.aldaravi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
sklearn = "*"

[tool.poetry.dev-dependencies]
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.app:start"
